--- a/app/src/main/res/layout/cell_example.xml
+++ b/app/src/main/res/layout/cell_example.xml
@@ -14,6 +14,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
+        android:animateLayoutChanges="true"
         android:padding="4dp"
         android:orientation="vertical">
 
@@ -39,5 +40,27 @@
             android:text="My subtitle..."
             android:textColor="@android:color/white"
             android:textSize="12sp" />
+
+        <LinearLayout
+            android:id="@+id/llExpandArea"
+            android:visibility="gone"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:text="Item One" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:text="Item Two" />
+
+        </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
